testsuite/tests/properties/invalid_generics/lexcial_env_root.lkt
import common

class ExampleSeq: FooNode {
    @parse_field items: ASTList[FooNode, Example]

    fun p(@ignored env: LexicalEnv[Example]): Bool = true
}
